# ElasticSearch-Commerce-SearchEngine

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api-conventions.md  architecture.md  configuration.md  database.md  dependency-injection.md  infrastructure-clients.md  observability.md
src/commerce_search/: __init__.py  main.py
src/commerce_search/api/: exception_handlers.py  router.py  schemas.py
src/commerce_search/api/v1/: health.py
src/commerce_search/application/catalog/: __init__.py
src/commerce_search/application/recommendation/: __init__.py
src/commerce_search/application/search/: __init__.py
src/commerce_search/application/user/: __init__.py
src/commerce_search/bootstrap/: __init__.py  container.py  lifecycle.py
src/commerce_search/domain/: __init__.py
src/commerce_search/domain/catalog/: entities.py  repositories.py
src/commerce_search/domain/recommendation/: __init__.py
src/commerce_search/domain/search/: __init__.py  models.py
src/commerce_search/domain/user/: __init__.py
src/commerce_search/infrastructure/: clients.py  dependencies.py
src/commerce_search/infrastructure/cache/: __init__.py  client.py
src/commerce_search/infrastructure/database/: __init__.py  dependencies.py  manager.py  uow.py
src/commerce_search/infrastructure/messaging/: __init__.py  kafka.py
src/commerce_search/infrastructure/search/: __init__.py  client.py
src/commerce_search/shared/: __init__.py  config.py  error_codes.py  exceptions.py  logging.py  middleware.py
tests/: conftest.py
tests/integration/api/: test_exception_handlers.py  test_health.py
tests/unit/bootstrap/: test_container.py  test_lifecycle.py
tests/unit/domain/catalog/: test_product.py
tests/unit/domain/search/: test_models.py
tests/unit/infrastructure/: test_dependencies.py
tests/unit/infrastructure/cache/: test_redis_client.py
tests/unit/infrastructure/database/: test_manager.py  test_uow.py
tests/unit/infrastructure/messaging/: test_kafka.py
tests/unit/infrastructure/search/: test_elasticsearch_client.py
tests/unit/shared/: test_config.py  test_logging.py  test_middleware.py
