[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commerce-search"
version = "0.1.0"
description = "Large-scale e-commerce search and personalized recommendation system"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Commerce Search Team" }]
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.115,<1.0",
    "pydantic-settings>=2.7,<3.0",
    "sqlalchemy[asyncio]==2.0.50",
    "structlog>=24.4,<26.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1.0",
    "mypy>=1.14,<2.1",
    "pre-commit>=4.0,<5.0",
    "pytest>=8.3,<9.1",
    "pytest-asyncio>=0.25,<1.4",
    "pytest-cov>=6.0,<7.1",
    "ruff>=0.15,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/commerce_search"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["commerce_search"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
