[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commerce-search"
version = "0.1.0"
description = "Large-scale e-commerce search and personalized recommendation system"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Commerce Search Team" }]
dependencies = [
    "aiokafka==0.14.0",
    "asyncpg==0.31.0",
    "elasticsearch[async]==8.19.3",
    "fastapi==0.136.3",
    "pydantic-settings==2.14.1",
    "redis==7.3.0",
    "sqlalchemy[asyncio]==2.0.50",
    "structlog==25.5.0",
    "uvicorn[standard]==0.49.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "mypy==2.1.0",
    "pre-commit==4.6.0",
    "pytest==9.1.0",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "ruff==0.15.17",
]

[tool.hatch.build.targets.wheel]
packages = ["src/commerce_search"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["aiokafka", "elasticsearch", "redis", "redis.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["commerce_search"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
